syntax = "proto3";

package remoteDataAccess;

// import "google/protobuf/any.proto";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "fish.grpc.rda";
option java_outer_classname = "RemoteDBServiceProto";

service RemoteDBService{
    rpc Execute(DbRequest) returns (DbResponse) {}
}

message DbRequest {
    string server = 1;
    int32 port = 2;
    string database = 3;
    string userId = 4;
    string password = 5;
    string sqlStatement = 6;
}

message DbResponse {
    string result = 1;
    string message = 2;
    DataSet dataset = 3;
}

message DataSet {
    repeated DataTable tables = 1; // Table list
}

message DataTable {
    string name = 1;
    repeated DataColumn columns = 2;
    repeated DataRow rows = 3;
}

message DataColumn {
    string name = 1;
    string type = 2;
    string dbType = 3;
    int32 dbSize = 4;
    int32 precision = 5;
    int32 index = 6;

}

message DataRow {
    repeated google.protobuf.Any values = 1;
}
